--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,9 @@ jobs:
         with:
           java-version: 11
       - name: Build with Gradle
-        run: ./gradlew build
+        run: |
+          echo "${{ secrets.KEYSTORE_GPG }}" > release.keystore.asc
+          gpg --batch --passphrase "${{ secrets.GPG_PASSWORD }}" -d -o release.keystore release.keystore.asc
+          echo "${{ secrets.CHAIN_GPG }}" > chain.p7b.asc
+          gpg --batch --passphrase "${{ secrets.GPG_PASSWORD }}" -d -o chain.p7b release.keystore.asc
+          ./gradlew build -keystoreFile=release.keystore -keystorePassword="${{ secrets.KEYSTORE_PASSWORD }}" -certFile=chain.p7b -certPassword="${{ secrets.CERT_PASSWORD }}" -certAlias=ignition
