--- a/build.gradle
+++ b/build.gradle
@@ -90,5 +90,5 @@ ignitionModule {
      *```
      *
      */
-     propertyFile = project.file("gradle.properties")
+//     propertyFile = project.file("gradle.properties")
 }
